div/bb-thyra-elise/resources/01_namespace.yaml
***REMOVED*** Create Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: app-beta
  annotations:
    argocd.argoproj.io/sync-wave: "-10"
  labels:
    name: app-beta
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
